2011-01-24  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Collect learned conflicts from
	relsat. Import conficts/partial ass/input from system.
	* include/solver/RelSatSolver.h: Likewise.

	* include/solver/Conflict.h: Add 2-dimension vector of Conflict*.

	* include/mcs/BeliefState.h (testBeliefSet): Add const for parameter.

2011-01-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/BaseHandler.h: Let Handler clean-up properly.
	* src/network/Server.cpp: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/Handler.h: Likewise.

	* src/dmcsc.cpp: Fix FTBFS.

	* include/dyndmcs/DynamicConfiguration.h: Fix DMCS_STATS_INFO
	compilation.

	* include/parser/BaseBuilder.h: Fix warnings.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/parser/ClaspResultOnlineParser.cpp: Likewise.
	* testsuite/testJoinThread.cpp: Likewise.
	* testsuite/testParsers.cpp: Likewise.

	* include/network/ConcurrentMessageQueue.h: Fix sanity checks.

	* include/network/BaseHandler.h: Moved typedefs to BaseHandler.
	* src/network/Server.cpp: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/Handler.h: Likewise.

2011-01-24  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/RouterThread.h: Move map ctxid <--> offset from
	Router to SAT wrapper.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.

	* include/solver/RelSatSolver.h: Add new method for
	collecting learned clauses from relsat.

	* include/dmcs/ConflictNotification.h: Have multiple conflicts in
	one Conflict notification.

	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/Conflict.h: Likewise.
	* include/network/NeighborOut.h: Likewise.