@@ -1,3 +1,7 @@
+2011-01-25  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* RelSatHelper.h: Add operator>> for ClauseList.
+
 2011-01-24  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* SATInstance.h: Support canceling additional clauses added by
